<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="not_valid_field">Please Enter A Valid Data</string>
    <string name="not_valid_phone">Please Enter A Valid Phone Number</string>
    <string name="not_valid_email">Please Enter A Valid Email Address</string>
    <string name="log_in">Log In</string>
    <string name="register_now">Sign Up</string>
    <string name="dont_have_account">Dont have account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="user_name">Name</string>
    <string name="user_phone">Phone</string>
    <string name="user_email">Email</string>
    <string name="user_choose_location">Choose Location</string>
    <string name="edit_profile">Edit</string>
    <string name="user_change_password">Change Password</string>
    <string name="verificatin_message">a verification code has been sent to your e-mail</string>
    <string name="star_symbol">*</string>
    <string name="verify_code">Verify</string>
    <string name="chat_message">Type Your Message</string>
    <string name="failed_message">Send failed, tap here to retry</string>
    <string name="my_bid_requests">My Bid Requests</string>
    <string name="my_requests">My Requests</string>
    <string name="my_requesr_quantity">Quantity</string>
    <string name="my_request_bid">Bid</string>
    <string name="my_request_created_at">Created At</string>
    <string name="my_request_buyer">Buyer</string>
    <string name="my_request_reject_request">Reject Request</string>
    <string name="my_requests_accept_request">Accept Request</string>
    <string name="my_bid_requests_cancel_request">Cancel Request</string>
    <string name="my_bid_request_seller">Seller</string>
    <string name="price_productdetails_textView">Price</string>
    <string name="creat_bid_productdetais">Creat Bid</string>
    <string name="buy_now_productdetails">Buy Now</string>
    <string name="cancel_productdetails">Cancel</string>
    <string name="messages_buy_product">Messages</string>
    <string name="pick_location_buy_product">Pick Location</string>
    <string name="continue_buy_product">Continue</string>
    <string name="cancel_buy_product">Cancel</string>
    <string name="quantity_order_chickout">Quantity:</string>
    <string name="price_order_checkout">Price:</string>
    <string name="deliver_fees_order_checkout">Deliver Fees:</string>
    <string name="total_ordercheckout_textView">Total</string>
    <string name="checkout_ordercheckout">Checkout</string>
    <string name="cancel_ordercheckout">Cancel</string>
    <string name="old_password_changepassworddialog">Old Password</string>
    <string name="new_password_changepassworddialog">New Password</string>
    <string name="confirm_new_password_changepassworddialog">Confirm New Password</string>
    <string name="change_password_changepassworddialog">Change Password</string>
    <string name="cancel_changepassworddialog">Cancel</string>
    <string name="pick_location_createbidrequest">Pick Location</string>
    <string name="bid_create_bid_request">Bid</string>
    <string name="quantity_create_bid_request">Quantity</string>
    <string name="mobile_create_bid_request">Mobile</string>
    <string name="cancel_creat_bid_request">Cancel</string>
    <string name="request_creat_bid_request">Request</string>
    <string name="laptob_hp_45">Laptob hp 45</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="sign_Up">SIGNUP</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pick_location">Pick Location</string>
    <string name="signUp">SignUp</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="signIn">SignIn</string>
    <string name="message_reset_password">Enter your email to send password reset link</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>
    <string name="favorite">Favorite</string>
    <string name="orders">Orders</string>
    <string name="chat">Chat</string>
    <string name="bid_request">Bid Request</string>
    <string name="my_bid_request">My Bid Request</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="payment_information">Your payment information</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date?</string>
    <string name="pay_now">Pay now</string>
    <string name="search_between_two_prices">Search between two prices</string>
    <string name="Search">Search</string>
    <string name="cvc">CVC</string>
    <string name="cancel">Cancel</string>
    <string name="first_price">First price</string>
    <string name="second_price">Second price</string>
    <string name="order_by">Order by:</string>
    <string name="near_by">Nearby:</string>
    <string name="image_icon">Image Icon</string>
    <string name="buy">BUY</string>
    <string name="icon_add_shopping_cart">icon add shopping cart</string>
    <string name="total_price">Total Price:</string>
    <string name="buyed_by">buyed by:</string>
    <string name="bid_now">Bid Now</string>
    <string name="my_orders">My Orders</string>
</resources>