<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="178dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/old_password_changepassworddialog_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:background="@drawable/rectangle_shape_grey"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/old_password_changepassworddialog"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/new_password_changepassworddialog_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_shape_grey"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:hint="@string/new_password_changepassworddialog"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/old_password_changepassworddialog_editText" />

    <EditText
        android:id="@+id/confirm_new_password_changepassworddialog_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:hint="@string/confirm_new_password_changepassworddialog"
        android:background="@drawable/rectangle_shape_grey"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/new_password_changepassworddialog_editText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="294dp" />



    <Button
        android:id="@+id/button_edit_profile"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/change_password_changepassworddialog"
        android:textColor="@color/white_color"
        android:background="@drawable/rectangle_shape_moov"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_new_password_changepassworddialog_editText"
        />

    <TextView
        android:id="@+id/cancel_changepassworddialog_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/cancel_changepassworddialog"
        android:textColor="@color/moov_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>


