<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ProgressBar
            android:id="@+id/sign_up_progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/primary_color_progress_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_imageView"
            android:layout_width="0pt"
            android:layout_height="60pt"
            android:layout_margin="32dp"
            android:src="@drawable/ecommerce_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_signUp_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/back_border_gray"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="16dp"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/logo_imageView" />

        <EditText
            android:id="@+id/email_signUp_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/back_border_gray"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/name_signUp_editText" />

        <EditText
            android:id="@+id/phone_number_signUp_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/back_border_gray"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="16dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/email_signUp_editText" />

        <EditText
            android:id="@+id/password_signUp_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/back_border_gray"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="16dp"
            android:hint="@string/Password"
            android:inputType="textWebPassword"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/phone_number_signUp_editText" />

        <EditText
            android:id="@+id/confirm_password_signUp_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/back_border_gray"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="16dp"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textWebPassword"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/password_signUp_editText" />


        <Button
            android:id="@+id/signUp_signUp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="64dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_solid_accent"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_signUp_editText" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/signUp_signUp_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:text="@string/already_have_account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login_signUp_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/signIn"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>